test/testMod3_2.slq

n:=8;
def main(){
	a:=13:uint[n];
	b:=-17:int[n];
	c:=23:!ℕ;
	d:=-29:!ℤ;
	e:=5/3:!ℚ;
	f:=-7/5:!ℚ;
	g:=0.137:!ℝ;
	h:=-1.37:!ℝ;
	assert(measure(a%d=-16)); /// error
	assert(measure(a%e=4/3)); /// error
	assert(measure(a%f=-1)); /// error
	assert(measure(a%g=0.122)); /// error
	assert(measure(a%h=-0.7)); /// error
	assert(measure(b%e=4/3)); /// error
	assert(measure(b%f=-1/5)); /// error
	assert(measure(b%g=0.125)); /// error
	assert(measure(b%h,-0.56)); /// error
	assert(measure(e%a=5/3)); /// error
	assert(measure(e%b=-46/3)); /// error
	assert(measure(f%a=58/5)); /// error
	assert(measure(f%b=-7/5)); /// error
	assert(g%a=0.137); /// error
	assert(g%b=-16.863); /// error
	assert(measure(h%a,11.63)); /// error
	assert(measure(h%b=-1.37)); /// error
}
